Fix layout shift bug
Fixes issue #17

--- a/photography-gallery/wwwroot/css/site.css
+++ b/photography-gallery/wwwroot/css/site.css
@@ -23,6 +23,7 @@ html {
 body {
     margin: 40px 0;
     overflow-y: scroll;
+    width:100%;
 }
 
 a {
